<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="simiyu.com.treasury.MainActivity"
    tools:showIn="@layout/app_bar_main"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#DD2B9FF0">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title1"
                        android:text="@string/title1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title1"
                        android:id="@+id/sample1"
                        android:layout_marginTop="4dp"
                        android:padding="5dp"
                        android:text="@string/sample1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to read"
                        android:id="@+id/more1"
                        android:layout_below="@id/sample1"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#DD2B9FF0"
                android:layout_below="@id/card1"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title2"
                        android:text="@string/title2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title2"
                        android:id="@+id/sample2"
                        android:layout_marginTop="4dp"
                        android:padding="5dp"
                        android:text="@string/sample2"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to read"
                        android:id="@+id/more2"
                        android:layout_below="@id/sample2"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#DD2B9FF0"
                android:layout_below="@id/card2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title3"
                        android:text="@string/title3"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title3"
                        android:id="@+id/sample3"
                        android:layout_marginTop="4dp"
                        android:padding="5dp"
                        android:text="@string/sample3"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to read"
                        android:id="@+id/more3"
                        android:layout_below="@id/sample3"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#DD2B9FF0"
                android:layout_below="@id/card3">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title4"
                        android:text="@string/title4"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title4"
                        android:id="@+id/sample4"
                        android:layout_marginTop="4dp"
                        android:padding="5dp"
                        android:text="@string/sample4"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to read"
                        android:id="@+id/more"
                        android:layout_below="@id/sample4"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#DD2B9FF0"
                android:layout_below="@id/card4">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title5"
                        android:text="@string/title5"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title5"
                        android:id="@+id/sample5"
                        android:layout_marginTop="4dp"
                        android:padding="5dp"
                        android:text="@string/sample5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Click to read"
                        android:id="@+id/more5"
                        android:layout_below="@id/sample5"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>





        </RelativeLayout>

    </ScrollView>





</RelativeLayout>
